Fix issue caused due to vh on mobile devices due to collapsing of URL bar and other changes

--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,3 @@
-@import "https://fonts.googleapis.com/css?family=Lato";@import "https://fonts.googleapis.com/css?family=Muli";
-/*.navbar {
-	font-family: 'Josefin Sans', sans-serif;
-	font-weight: 600;
-	font-size: 15px;
-	height: 75px;
-}
-.shrinkNav {
-	height: 50px;
-	background-color: #222629;
-	font-size: 15px;
-}
-.navbar-brand {
-	font-family: 'Lovelo-Light';
-	color: #163530;
-}*/
 /*.loader {
     position: fixed;
     left: 0px;
@@ -23,17 +7,19 @@
     z-index: 9999;
     background: url('../img/loaders/2.gif') 50% 50% no-repeat rgb(255,255,255);
 }*/
+html, body {
+	height: 100%;
+}
 #page1 {
-	height: 100vh;
+	min-height: 100%;
 	font-family: 'BrandonText-Regular', 'Arial', sans-serif;
 	background-color: #ebfbfa;
-	background-size: cover;
 }
 .company-heading {
 	font-family: 'Lovelo-Light', 'BrandonText-Regular', Arial, sans-serif;
 	text-align: center;
-	font-size: 3.5em;
-	padding-top: 10%;
+	font-size: 3em;
+	padding-top: 5vh;
 	color: #163530;
 }
 .header-logo {
@@ -41,9 +27,9 @@
 }
 .welcome-text {
 	text-align: center;
-	padding: 8% 5% 5% 5%;
+	padding: 4vh 3vw 0 3vw;
 	font-size: 1.6em;
-	/*min-height: 60%;*/
+	min-height: 30vh;
 	color: #808080;
 }
 .mockup {
@@ -51,15 +37,14 @@
 	left: 0;
 	right: 0;
 	bottom: 0;
-	margin-top: auto;
 }
 .mockup-image {
-	width: 30%;
+	height: 50vh;
 	margin-left: auto;
 	margin-right: auto;
-	display: block;
-	position: fixed;
-	bottom: 0;
+	/*display: block;*/
+	/*position: fixed;
+	bottom: 0;*/
 }
 .typewrite {
 	color: #6AD7AD;
@@ -86,19 +71,18 @@
 @media only screen and (min-width: 1200px) {
 	.company-heading {
 		font-size: 6em;
-		padding-top: 3%;
+		padding-top: 5vh;
 	}
 	.header-logo {
 		width: 100px;
 	}
 	.welcome-text {
 		font-size: 2.3em;
-		padding: 3% 20% 5% 20%;
-		/*min-height: 40%;*/
+		padding: 5vh 25vw 0 25vw;
+		min-height: 40%;
 	}
 	.mockup-image {
-		/*height: 55vh;*/
-		width: 13%;
+		height: 55vh;
 	}
 	.mock1 {
 		/*right: -27em;*/
